--- a/coder-swag/Base.lproj/Main.storyboard
+++ b/coder-swag/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -82,11 +83,111 @@
                     <navigationItem key="navigationItem" title="CODER SWAG" id="MY3-fK-7Q4"/>
                     <connections>
                         <outlet property="categoryTable" destination="VWO-wa-W8U" id="dlC-wC-bhj"/>
+                        <segue destination="eYD-GG-baR" kind="show" id="VgK-Rx-Edu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="62.946428571428569"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="vfL-17-Mjc">
+            <objects>
+                <viewController id="eYD-GG-baR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dx8-kz-0aD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PRODUCTS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QVz-Kz-b1V">
+                                <rect key="frame" x="20" y="30" width="165" height="23.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="23.5" id="RJw-i0-pSH"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="165" id="Tow-YX-PyG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Byx-Wq-a5i">
+                                <rect key="frame" x="0.0" y="69.5" width="414" height="704.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wUW-Vb-Jof">
+                                    <size key="itemSize" width="179" height="281"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="6EM-pw-dK3" customClass="ProductCell" customModule="coder_swag" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="179" height="281"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="cUy-7P-K2R">
+                                            <rect key="frame" x="0.0" y="0.0" width="179" height="281"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Devslopes Logo Graphic T-Shirt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xih-ph-vtJ">
+                                                    <rect key="frame" x="8" y="188" width="163" height="63"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="63" id="nQO-Mu-CC5"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                                                    <color key="textColor" red="0.16904110378689241" green="0.16904110378689241" blue="0.16904110378689241" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$25" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oZ1-Pc-DYx">
+                                                    <rect key="frame" x="8" y="254" width="163" height="22"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="hqG-c8-9ir">
+                                                    <rect key="frame" x="0.0" y="1" width="178" height="178"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="178" id="RrM-v8-ys7"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="0.80859172896833609" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="xih-ph-vtJ" firstAttribute="leading" secondItem="cUy-7P-K2R" secondAttribute="leading" constant="8" id="5Ao-RT-7d4"/>
+                                                <constraint firstItem="hqG-c8-9ir" firstAttribute="top" secondItem="cUy-7P-K2R" secondAttribute="top" constant="1" id="5sv-ld-mFm"/>
+                                                <constraint firstAttribute="trailing" secondItem="xih-ph-vtJ" secondAttribute="trailing" constant="8" id="9Aw-eZ-dox"/>
+                                                <constraint firstAttribute="trailing" secondItem="oZ1-Pc-DYx" secondAttribute="trailing" constant="8" id="DxW-iW-PSl"/>
+                                                <constraint firstItem="oZ1-Pc-DYx" firstAttribute="leading" secondItem="cUy-7P-K2R" secondAttribute="leading" constant="8" id="Pod-dJ-tIO"/>
+                                                <constraint firstItem="xih-ph-vtJ" firstAttribute="top" secondItem="hqG-c8-9ir" secondAttribute="bottom" constant="9" id="e2H-9V-zP0"/>
+                                                <constraint firstItem="hqG-c8-9ir" firstAttribute="leading" secondItem="cUy-7P-K2R" secondAttribute="leading" id="f6i-oA-g6Q"/>
+                                                <constraint firstItem="oZ1-Pc-DYx" firstAttribute="top" secondItem="xih-ph-vtJ" secondAttribute="bottom" constant="3" id="nzO-B8-nbU"/>
+                                                <constraint firstAttribute="trailing" secondItem="hqG-c8-9ir" secondAttribute="trailing" constant="1" id="qjn-Mh-TIs"/>
+                                                <constraint firstAttribute="bottom" secondItem="oZ1-Pc-DYx" secondAttribute="bottom" constant="5" id="zdT-tP-CqS"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <size key="customSize" width="179" height="281"/>
+                                        <connections>
+                                            <outlet property="productImage" destination="hqG-c8-9ir" id="7aT-zM-kWV"/>
+                                            <outlet property="productPrice" destination="oZ1-Pc-DYx" id="fDf-Bs-XBE"/>
+                                            <outlet property="productTitle" destination="xih-ph-vtJ" id="QrZ-TH-3BI"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="A8Q-NV-UEF"/>
+                        <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="QVz-Kz-b1V" firstAttribute="leading" secondItem="A8Q-NV-UEF" secondAttribute="leading" constant="20" id="6un-eM-imA"/>
+                            <constraint firstItem="Byx-Wq-a5i" firstAttribute="top" secondItem="QVz-Kz-b1V" secondAttribute="bottom" constant="16" id="BN6-Um-qkP"/>
+                            <constraint firstItem="A8Q-NV-UEF" firstAttribute="bottom" secondItem="Byx-Wq-a5i" secondAttribute="bottom" id="FtB-tY-2Xy"/>
+                            <constraint firstItem="A8Q-NV-UEF" firstAttribute="trailing" secondItem="Byx-Wq-a5i" secondAttribute="trailing" id="NKD-Dr-mwO"/>
+                            <constraint firstItem="QVz-Kz-b1V" firstAttribute="top" secondItem="A8Q-NV-UEF" secondAttribute="top" constant="30" id="j8f-At-reA"/>
+                            <constraint firstItem="Byx-Wq-a5i" firstAttribute="leading" secondItem="A8Q-NV-UEF" secondAttribute="leading" id="jBh-20-Q8T"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="EoF-Bm-fj4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zBj-Of-yrN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1844.9275362318842" y="62.946428571428569"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="YIc-p0-TbU">
@@ -96,6 +197,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="oyW-3c-FvU">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.3411764705882353" green="0.15294117647058825" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -116,6 +218,7 @@
     </scenes>
     <resources>
         <image name="digital" width="1024" height="703"/>
+        <image name="shirt01" width="500" height="500"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
