--- a/coder-swag/Base.lproj/Main.storyboard
+++ b/coder-swag/Base.lproj/Main.storyboard
@@ -83,17 +83,17 @@
                     <navigationItem key="navigationItem" title="CODER SWAG" id="MY3-fK-7Q4"/>
                     <connections>
                         <outlet property="categoryTable" destination="VWO-wa-W8U" id="dlC-wC-bhj"/>
-                        <segue destination="eYD-GG-baR" kind="show" id="VgK-Rx-Edu"/>
+                        <segue destination="eYD-GG-baR" kind="show" identifier="ProductsVC" id="VgK-Rx-Edu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="62.946428571428569"/>
         </scene>
-        <!--View Controller-->
+        <!--ProductsVC-->
         <scene sceneID="vfL-17-Mjc">
             <objects>
-                <viewController id="eYD-GG-baR" sceneMemberID="viewController">
+                <viewController id="eYD-GG-baR" customClass="ProductsVC" customModule="coder_swag" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dx8-kz-0aD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -108,61 +108,62 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Byx-Wq-a5i">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Byx-Wq-a5i">
                                 <rect key="frame" x="0.0" y="69.5" width="414" height="704.5"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="0.92014460882585014" green="0.92925495148749215" blue="0.92925495148749215" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wUW-Vb-Jof">
-                                    <size key="itemSize" width="179" height="281"/>
+                                    <size key="itemSize" width="165" height="221"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="6EM-pw-dK3" customClass="ProductCell" customModule="coder_swag" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="179" height="281"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductCell" id="6EM-pw-dK3" customClass="ProductCell" customModule="coder_swag" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="165" height="221"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="cUy-7P-K2R">
-                                            <rect key="frame" x="0.0" y="0.0" width="179" height="281"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="165" height="221"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Devslopes Logo Graphic T-Shirt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xih-ph-vtJ">
-                                                    <rect key="frame" x="8" y="188" width="163" height="63"/>
+                                                    <rect key="frame" x="8" y="147.5" width="149" height="40"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="63" id="nQO-Mu-CC5"/>
+                                                        <constraint firstAttribute="height" constant="40" id="nQO-Mu-CC5"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="13"/>
                                                     <color key="textColor" red="0.16904110378689241" green="0.16904110378689241" blue="0.16904110378689241" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$25" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oZ1-Pc-DYx">
-                                                    <rect key="frame" x="8" y="254" width="163" height="22"/>
+                                                    <rect key="frame" x="8" y="193.5" width="149" height="19.5"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="hqG-c8-9ir">
-                                                    <rect key="frame" x="0.0" y="1" width="178" height="178"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="hqG-c8-9ir">
+                                                    <rect key="frame" x="0.0" y="0.0" width="165" height="150"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="178" id="RrM-v8-ys7"/>
+                                                        <constraint firstAttribute="width" constant="165" id="YRc-Br-VtY"/>
+                                                        <constraint firstAttribute="height" constant="150" id="s5z-7E-Det"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="0.80859172896833609" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
+                                                <constraint firstItem="hqG-c8-9ir" firstAttribute="leading" secondItem="cUy-7P-K2R" secondAttribute="leading" id="33i-UM-z3a"/>
                                                 <constraint firstItem="xih-ph-vtJ" firstAttribute="leading" secondItem="cUy-7P-K2R" secondAttribute="leading" constant="8" id="5Ao-RT-7d4"/>
-                                                <constraint firstItem="hqG-c8-9ir" firstAttribute="top" secondItem="cUy-7P-K2R" secondAttribute="top" constant="1" id="5sv-ld-mFm"/>
+                                                <constraint firstItem="oZ1-Pc-DYx" firstAttribute="top" secondItem="hqG-c8-9ir" secondAttribute="bottom" constant="43.5" id="7sP-55-lKN"/>
                                                 <constraint firstAttribute="trailing" secondItem="xih-ph-vtJ" secondAttribute="trailing" constant="8" id="9Aw-eZ-dox"/>
                                                 <constraint firstAttribute="trailing" secondItem="oZ1-Pc-DYx" secondAttribute="trailing" constant="8" id="DxW-iW-PSl"/>
+                                                <constraint firstItem="hqG-c8-9ir" firstAttribute="top" secondItem="cUy-7P-K2R" secondAttribute="top" id="Hfl-He-4gO"/>
                                                 <constraint firstItem="oZ1-Pc-DYx" firstAttribute="leading" secondItem="cUy-7P-K2R" secondAttribute="leading" constant="8" id="Pod-dJ-tIO"/>
-                                                <constraint firstItem="xih-ph-vtJ" firstAttribute="top" secondItem="hqG-c8-9ir" secondAttribute="bottom" constant="9" id="e2H-9V-zP0"/>
-                                                <constraint firstItem="hqG-c8-9ir" firstAttribute="leading" secondItem="cUy-7P-K2R" secondAttribute="leading" id="f6i-oA-g6Q"/>
-                                                <constraint firstItem="oZ1-Pc-DYx" firstAttribute="top" secondItem="xih-ph-vtJ" secondAttribute="bottom" constant="3" id="nzO-B8-nbU"/>
-                                                <constraint firstAttribute="trailing" secondItem="hqG-c8-9ir" secondAttribute="trailing" constant="1" id="qjn-Mh-TIs"/>
-                                                <constraint firstAttribute="bottom" secondItem="oZ1-Pc-DYx" secondAttribute="bottom" constant="5" id="zdT-tP-CqS"/>
+                                                <constraint firstAttribute="trailing" secondItem="hqG-c8-9ir" secondAttribute="trailing" id="dot-1B-hcd"/>
+                                                <constraint firstItem="oZ1-Pc-DYx" firstAttribute="top" secondItem="xih-ph-vtJ" secondAttribute="bottom" constant="6" id="nzO-B8-nbU"/>
+                                                <constraint firstAttribute="bottom" secondItem="oZ1-Pc-DYx" secondAttribute="bottom" constant="8" id="zdT-tP-CqS"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <size key="customSize" width="179" height="281"/>
+                                        <size key="customSize" width="165" height="221"/>
                                         <connections>
                                             <outlet property="productImage" destination="hqG-c8-9ir" id="7aT-zM-kWV"/>
                                             <outlet property="productPrice" destination="oZ1-Pc-DYx" id="fDf-Bs-XBE"/>
@@ -184,6 +185,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="EoF-Bm-fj4"/>
+                    <connections>
+                        <outlet property="productsCollection" destination="Byx-Wq-a5i" id="7ue-tO-Y9f"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zBj-Of-yrN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
